Posta pasantia Brasil casi terminado, arregladas cuestiones de layout que no necesitaba

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,15 +1,6 @@
-<header class="jumbotron subhead" id="overview">
-	<h1>{{ page.title }}</h1>
-	<div class="subnav">
-		<ul class="nav nav-pills">
-			<li><a href="#">Typography</a></li>
-			<li><a href="#">Navbar</a></li>
-			<li><a href="#">Buttons</a></li>
-			<li><a href="#">Forms</a></li>
-			<li><a href="#">Miscellaneous</a></li>
-		</ul>
-	</div>
-</header>
+<div class="page-header">
+  <h1>{{ page.title }}</h1>
+</div>
 
 <div class="row">
   <div class="span10">
