--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -1,3 +1,9 @@
+{% if page.title %}
+<div class="page-header">
+  <h1>{{ page.title }}</h1>
+</div>
+{% endif%}
+
 <div class="row">
   <div class="span14">
     {{ content }}
