--- a/assets/themes/twitter/css/1.4.0/bootstrap.css
+++ b/assets/themes/twitter/css/1.4.0/bootstrap.css
@@ -3466,7 +3466,6 @@ a.thumbnail:hover {
 .hero-unit {
   padding: 60px;
   margin-bottom: 30px;
-  background-color: #f5f5f5;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
@@ -3478,6 +3477,7 @@ a.thumbnail:hover {
   letter-spacing: -1px;
 }
 .hero-unit p {
+  margin-top: 10px;
   font-size: 18px;
   font-weight: 200;
   line-height: 30px;
