--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -2,7 +2,17 @@
   <h1>{{ page.title }}</h1>
 </div>
 
+<div class="addthis_bar addthis_bar_vertical addthis_bar_large" style="top:100px;">
+    <div class="addthis_toolbox addthis_default_style">
+        <span><a class="addthis_button_facebook_like" fb:like:layout="box_count"></a></span>
+        <span><a class="addthis_button_tweet" tw:count="vertical"></a></span>
+        <span><a class="addthis_button_google_plusone" g:plusone:size="tall"></a></span>
+        <span><a class="addthis_counter"></a></span>
+    </div>
+</div>
+
 <div class="row">
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f5db8e8739e1936"></script>
   <div class="span10">
     {{ content }}
     <hr>
