Agregar layout de posts Agregar post sobre pasantia en Brasil Actualizar url de assets en default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <title>{{ page.title }}</title>
     <meta name="author" content="{{ site.author.name }}">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>El Juli</h1>
+        <h1>
+          <a href="/">El Juli</a>
+        </h1>
         <p>Wantrepreneur buscando alguna piedrita para ver si evoluciona en Entrepreneur</p>
 
 
@@ -30,7 +32,7 @@
         <p><small>Hosteado en GitHub Pages &mdash; Tema por <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="/javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
