Agregar perfil de linkedIn al layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
         <p>Wantrepreneur buscando alguna piedrita para ver si evoluciona en Entrepreneur</p>
 
 
-        <p class="view"><a href="https://github.com/JulianMayorga">Ver Mi Perfil de GitHub</a></p>
+        <p class="view"><a href="http://www.linkedin.com/in/julianmayorga">Agregame en LinkedIn</a></p>
+        <p class="view"><a href="https://github.com/JulianMayorga">Tirate un código en mi GitHub</a></p>
 
       </header>
       <section>
