--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>
+          <img src="favicon.ico">
           <a href="/">El Juli</a>
         </h1>
         <p>Wantrepreneur buscando alguna piedrita para ver si evoluciona en Entrepreneur</p>
